--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#ff6e27</color>
+
+    <color name="gray">#4D4D53</color>
+    <color name="darkgray">#302B2B</color>
+    <color name="green">#3E6A26</color>
+
 </resources>
