--- a/app/src/main/res/layout/linear_layout_aninhados.xml
+++ b/app/src/main/res/layout/linear_layout_aninhados.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="4dp">
 
 
         <LinearLayout
@@ -32,6 +33,14 @@
                 android:text="0"
                 android:textColor="@color/white"
                 android:textSize="55dp" />
+            
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:background="@color/darkgray"
+                android:layout_marginHorizontal="8dp"
+                />
+            
         </LinearLayout>
 
         <LinearLayout
@@ -253,16 +262,15 @@
                 android:backgroundTint="@color/black"
                 android:textSize="28dp" />
 
-            <Button
-                android:background="@drawable/btn_igual"
-
+            <ImageButton
                 android:id="@+id/btnIgual"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="="
-                android:textColor="@color/white"
-                android:textSize="28dp" />
+                android:background="@drawable/ic_igual"
+                android:layout_marginVertical="8dp"
+                android:layout_marginHorizontal="20dp"
+                />
 
         </LinearLayout>
 
