--- a/app/src/main/res/layout/constraint_layout.xml
+++ b/app/src/main/res/layout/constraint_layout.xml
@@ -62,16 +62,68 @@
             app:layout_constraintTop_toBottomOf="@id/mobileTextView" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:layout_margin="16dp"
             android:id="@+id/editImageView"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_margin="16dp"
             android:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/ic_baseline_edit_24">
 
         </androidx.appcompat.widget.AppCompatImageView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/profileBelowTop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/gray"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="8dp"
+        app:layout_constraintTop_toBottomOf="@id/profileTop">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/myOrdersCardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/myOrdersTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="My Orders"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/divisorView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_marginVertical="16dp"
+                    android:background="@color/gray"
+                    app:layout_constraintTop_toBottomOf="@id/myOrdersTextView" />
+
+                <TextView
+                    android:layout_marginTop="16dp"
+                    android:id="@+id/viewAllOrdersTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="VIEW ALL ORDERS"
+                    android:textColor="@color/purple_200"
+                    app:layout_constraintTop_toBottomOf="@id/divisorView1"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
