--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#ff6e27</color>
 
-    <color name="gray">#4D4D53</color>
+    <color name="gray">#AEAEAE</color>
     <color name="darkgray">#302B2B</color>
     <color name="green">#3E6A26</color>
 
