--- a/app/src/main/res/layout/constraint_layout.xml
+++ b/app/src/main/res/layout/constraint_layout.xml
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toBottomOf="@id/profileTop">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/myOrdersCardView"
+            android:id="@+id/CardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent">
@@ -96,7 +96,7 @@
                 android:padding="16dp">
 
                 <TextView
-                    android:id="@+id/myOrdersTextView"
+                    android:id="@+id/TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="My Orders"
@@ -106,10 +106,10 @@
                 <View
                     android:id="@+id/divisorView1"
                     android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
+                    android:layout_height="0.6dp"
                     android:layout_marginVertical="16dp"
                     android:background="@color/gray"
-                    app:layout_constraintTop_toBottomOf="@id/myOrdersTextView" />
+                    app:layout_constraintTop_toBottomOf="@id/TextView" />
 
                 <TextView
                     android:layout_marginTop="16dp"
@@ -125,6 +125,186 @@
 
         </androidx.cardview.widget.CardView>
 
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/CardView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/CardView"
+            android:layout_marginTop="8dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/TextView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="My Orders"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/divisorView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.6dp"
+                    android:layout_marginVertical="16dp"
+                    android:background="@color/gray"
+                    app:layout_constraintTop_toBottomOf="@id/TextView2" />
+
+                <TextView
+                    android:layout_marginTop="16dp"
+                    android:id="@+id/viewAllOrdersTextView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="VIEW ALL ORDERS"
+                    android:textColor="@color/purple_200"
+                    app:layout_constraintTop_toBottomOf="@id/divisorView2"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/CardView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/CardView2"
+            android:layout_marginTop="8dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/TextView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="My Orders"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/divisorView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.6dp"
+                    android:layout_marginVertical="16dp"
+                    android:background="@color/gray"
+                    app:layout_constraintTop_toBottomOf="@id/TextView3" />
+
+                <TextView
+                    android:layout_marginTop="16dp"
+                    android:id="@+id/viewAllOrdersTextView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="VIEW ALL ORDERS"
+                    android:textColor="@color/purple_200"
+                    app:layout_constraintTop_toBottomOf="@id/divisorView3"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/CardView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/CardView3"
+            android:layout_marginTop="8dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/TextView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="My Orders"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/divisorView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.6dp"
+                    android:layout_marginVertical="16dp"
+                    android:background="@color/gray"
+                    app:layout_constraintTop_toBottomOf="@id/TextView4" />
+
+                <TextView
+                    android:layout_marginTop="16dp"
+                    android:id="@+id/viewAllOrdersTextView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="VIEW ALL ORDERS"
+                    android:textColor="@color/purple_200"
+                    app:layout_constraintTop_toBottomOf="@id/divisorView4"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/CardView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/CardView4"
+            android:layout_marginTop="8dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/TextView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="My Orders"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/divisorView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.6dp"
+                    android:layout_marginVertical="16dp"
+                    android:background="@color/gray"
+                    app:layout_constraintTop_toBottomOf="@id/TextView5" />
+
+                <TextView
+                    android:layout_marginTop="16dp"
+                    android:id="@+id/viewAllOrdersTextView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="VIEW ALL ORDERS"
+                    android:textColor="@color/purple_200"
+                    app:layout_constraintTop_toBottomOf="@id/divisorView5"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+        
+        
+        
+        
+        
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
